[tool.poetry]
name = "publaynet-analysis"
version = "0.1.0"
description = ""
authors = ["sam <contact@justsam.io>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.14"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
pandas = "^1.2.4"
torch = "^1.8.1"
torchvision = "^0.9.1"
Pillow = "^8.2.0"
Shapely = "^1.7.1"
scikit-learn = "^0.24.2"
sympy = "^1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
